# QA-FY26

./: .env.example  .gitignore  CLAUDE.md  README.md  slides.md
docs/: documentation-improvement-plan.md  fujita-mission-slide.md  index.md  progress-management-policy.md  progress.md  qa-overview-slide.md  slide-workflow.md  stakeholders.md
docs/adr/: ADR-003-lot-list-view.md  (+2 more)
powerpoint-orgn/: 品質G　2026取り組み.pptx
prototype/: Makefile  docker-compose.test.yml  docker-compose.yml
prototype/m1-gnss/backend/: Cargo.toml
prototype/m1-gnss/backend/src/: lib.rs  main.rs
prototype/m1-gnss/backend/src/device/: filter.rs  manager.rs  mod.rs  multi_manager.rs  status.rs
prototype/m1-gnss/backend/src/inspection/: engine.rs  judge.rs  mod.rs  types.rs
prototype/m1-gnss/backend/src/repository/: mod.rs  sqlite.rs  types.rs
prototype/m1-gnss/backend/src/service/: converter.rs  inspection_service.rs  mod.rs
prototype/m1-gnss/backend/src/ubx/: ack.rs  cfg_cfg.rs  cfg_prt.rs  cfg_rate.rs  cfg_valdel.rs  cfg_valget.rs  cfg_valset.rs  common.rs  mod.rs  mon_rf.rs  mon_span.rs  mon_ver.rs  nav_dop.rs  nav_pvt.rs  nav_sat.rs  nav_sig.rs  nav_status.rs  sec_uniqid.rs
prototype/m1-gnss/backend/src/web/: blink_api.rs  cfg_valdel_api.rs  cfg_valget_api.rs  device_api.rs  gnss_state_api.rs  inspection_api.rs  lot_api.rs  message_scan_api.rs  mod.rs  mon_span_api.rs  mon_ver_api.rs  nav_sat_api.rs  nav_sig_api.rs  nav_status_api.rs  ntrip_api.rs  outdoor_inspection_api.rs  reset_config_api.rs  set_periodic_output_api.rs
tools/: README.md  pdf_page_extractor.py  test-100.sh  test-polling.sh
(+1551 files in other folders)
