[package]
name = "m1-gnss"
version = "0.1.0"
edition = "2021"
description = "GNSS評価ツール（F9P UBX通信 + Webサーバー）"

[dependencies]
# Webフレームワーク
actix-web = "4"
actix-files = "0.6"
actix-cors = "0.7"

# シリアル通信
serialport = "4"

# 非同期ランタイム
tokio = { version = "1", features = ["full"] }

# JSON処理
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ログ（tracing + ファイル出力）
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-appender = "0.2"

# URLエンコーディング
urlencoding = "2"

# バイナリ解析用
bytes = "1"

# DB
rusqlite = { version = "0.31", features = ["bundled"] }

# 日時
chrono = { version = "0.4", features = ["serde"] }

# NTRIP/RTK（独自実装 - ntrip-clientはRTCMパース済みデータを返すため不使用）
# 参照: docs/adr/m1/ADR-011-ntrip-implementation.md

[dev-dependencies]
# テスト用
tokio-test = "0.4"
rstest = "0.18"
